--- a/My_project/.gitignore
+++ b/My_project/.gitignore
@@ -119,11 +119,14 @@ celerybeat.pid
 # Environments
 .env
 .venv
+.myvenv
 env/
 venv/
+myvenv/
 ENV/
 env.bak/
 venv.bak/
+myvenv.bak/
 
 # Spyder project settings
 .spyderproject
